# bharat-highway-asset-intelligence

./: .gitignore  AGENTS.md  CODEOWNERS  README.md  bundle-manifest.json  methodology.html  pyproject.toml  requirements.txt
.github/: dependabot.yml
.github/workflows/: ci-quality.yml  dependency-automerge.yml  dependency-remediation.yml  devsecops-observability.yml  github-pages.yml  research-pipeline.yml  reusable-ci-quality.yml  reusable-security-scans.yml  security-supplychain.yml
apps/web/: index.html  test_import.html
data/manifests/: catalog.json  correlation_matrix.json  data_gov_in_gsdp_stateut_current_prices_2017_23.json  data_gov_in_nhai_district_projects_implemented.json  data_gov_in_nhai_himachal_nhai_projects_ongoing.json  data_gov_in_nhai_project_finance_api.json  data_gov_in_nhai_projects_api.json  data_gov_in_nhai_projects_completed_undercon_awarded_last3yrs.json  data_gov_in_nhai_projects_district_target_2023.json  data_gov_in_nhai_punjab_42_projects_implementation.json  data_gov_in_nhai_state_projects_api.json  data_gov_in_nhai_stateut_length_constructed_2019_24.json  data_gov_in_nhai_stateut_project_delay_status_2024.json  (+22 more)
docs/: PROJECT_CONTEXT.md
pipelines/: __init__.py  common.py  correlation.py  ingest.py  morth_appendix_validation.py  quality.py  url_safety.py
research/: __init__.py  gap_report.py  gaps.md  loader.py  scan.py  source_inventory.json  source_inventory.yaml
scripts/: dependency_pr_codex_loop.sh  devsecops_evidence.py  nhai_annual_report_extractor.py  nhai_annual_report_merge.py  playwright_smoke.py  validate_artifacts.py
(+137 files in other folders)
