[build-system]
requires = ["setuptools>=82.0.1", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "bharat-highway-asset-intelligence"
version = "0.1.0"
description = "Research-first, official-first Bharat Highway intelligence scaffold"
requires-python = ">=3.10"
dependencies = [
  "pandas>=2.3.3",
  "pyyaml>=6.0.3",
  "requests>=2.33.1",
  "python-dateutil>=2.9.0.post0",
  "pydantic>=2.12.5",
  "pyarrow>=23.0.1",
  "duckdb>=1.5.1",
  "playwright>=1.58.0"
]
